Fix about us overlap

--- a/src/one/us.css
+++ b/src/one/us.css
@@ -7,7 +7,7 @@
     max-width: 100%;
     height: auto;
     
-    padding: 80px 20px;
+
 }
 .back2 {
     display: flex;
